--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,14 +26,19 @@
             android:theme="@style/ImageAppTheme" />
         <activity
             android:name=".activities.SplashScreenActivity"
-            android:theme="@style/SplashScreenTheme"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait"
+            android:theme="@style/SplashScreenTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".activities.OrderActivity"
+            android:parentActivityName=".activities.MainActivity" />
+        <activity android:name=".activities.OrderPagerActivity"
+            android:parentActivityName=".activities.MainActivity" />
     </application>
 
 </manifest>
