Search page and Firebase authentication

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,7 @@ dependencies {
     implementation 'net.rimoto:intlphoneinput:1.0.1'
     // firebase implementation
     implementation 'com.google.firebase:firebase-core:12.0.1'
+    implementation 'com.google.firebase:firebase-auth:12.0.1'
 }
 
 apply plugin: 'com.google.gms.google-services'
