--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:3.1.0'
         classpath 'com.google.gms:google-services:3.2.0'
+        classpath 'com.apollographql.apollo:gradle-plugin:0.4.1' //Add this
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
