--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,10 @@ dependencies {
     // firebase implementation
     implementation 'com.google.firebase:firebase-core:12.0.1'
     implementation 'com.google.firebase:firebase-auth:12.0.1'
+    // apollo library for GraphQL library
+    implementation 'com.apollographql.apollo:apollo-runtime:0.4.4'
+    // logs HTTP request and response data
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.10.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
