--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,15 +21,8 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-    implementation 'com.android.support:appcompat-v7:27.1.0'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
-    implementation 'com.android.support:support-v4:27.1.0'
-    implementation 'com.android.support:design:27.1.0'
-    implementation 'com.android.support:cardview-v7:27.1.0'
-    // RecyclerView
-    implementation 'com.android.support:recyclerview-v7:27.1.0'
     // Picasso image library
     implementation 'com.squareup.picasso:picasso:2.71828'
     // creates circular indicators of view pager image carousel
@@ -42,6 +35,17 @@ dependencies {
     implementation 'com.apollographql.apollo:apollo-runtime:0.4.4'
     // logs HTTP request and response data
     implementation 'com.squareup.okhttp3:logging-interceptor:3.10.0'
+    // ok http library is used for network request
+    implementation 'com.squareup.okhttp3:okhttp:3.10.0'
+    // set up volley
+    implementation 'com.mcxiaoke.volley:library:1.0.19'
+    //noinspection GradleCompatible
+    implementation 'com.android.support:appcompat-v7:27.1.1'
+    implementation 'com.android.support.test:runner:1.0.2-alpha1'
+    implementation 'com.android.support:support-v4:27.1.1'
+    implementation 'com.android.support:design:27.1.1'
+    implementation 'com.android.support:cardview-v7:27.1.1'
+    implementation 'com.android.support:recyclerview-v7:27.1.1'
 }
 
 apply plugin: 'com.google.gms.google-services'
