--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,9 +18,11 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
+        android:name=".others.VolleyHelperClass"
         android:allowBackup="true"
         android:icon="@mipmap/ic_box"
         android:label="@string/app_name"
+        android:largeHeap="true"
         android:roundIcon="@mipmap/ic_box_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
