--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
     <application
         android:name=".others.VolleyHelperClass"
         android:allowBackup="true"
+        android:hardwareAccelerated="false"
         android:icon="@mipmap/ic_box"
         android:label="@string/app_name"
         android:largeHeap="true"
